# eth-agent

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md
agent/: Cargo.toml  agent.rs  main.rs  mcp_client.rs  tools.rs  types.rs
foundry-mcp/: Cargo.toml  foundry_service.rs  main.rs  test_mcp
