[package]
name = "eth-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eth-agent"
path = "main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
rig-core = { version = "0.14.0", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rmcp = { version = "0.4.0", features = ["server", "client", "transport-io", "macros", "transport-child-process"] }
reqwest = { version = "0.12.11", features = ["json"] }
 